<resources>

    <string name="app_name">Lembrete Beber Agua</string>
    <string name="hint_peso">Seu peso (KG)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diaria</string>
    <string name="lembrete">LEMBRETE</string>
    <string name="alarme">ALARME</string>
    <string name="txt_hora">00</string>
    <string name="txt_dois_pontos">:</string>
    <string name="txt_minutos">00</string>
    <string name="toast_informe_peso">Informe seu Peso!</string>
    <string name="toast_informe_idade">Informe sua Idade!</string>
    <string name="dialog_titulo">Redefinir Dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_mensagem">Hora de beber água!</string>

</resources>