<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        tools:context=".MainActivity">


        <View
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/bebaagua"
            app:layout_constraintStart_toStartOf="@+id/container_header"
            app:layout_constraintTop_toTopOf="@+id/container_header" />

        <ImageView
            android:id="@+id/ic_refresh"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="@+id/container_header"
            app:layout_constraintTop_toTopOf="@+id/container_header" />

        <EditText
            android:id="@+id/edit_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="16dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHint="@android:color/holo_blue_bright"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edit_idade"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_header" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/holo_blue_light"

            android:gravity="center"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:maxLength="3"
            android:padding="16dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHint="@android:color/holo_blue_bright"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_peso"
            app:layout_constraintTop_toBottomOf="@+id/container_header" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_degrade_button"
            android:clickable="true"
            android:elevation="12dp"
            android:padding="15dp"
            android:text="@string/text_button_calcular"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_peso" />

     <!--   <View
            android:id="@+id/container_result"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/container_result"
            android:elevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_calcular" />-->

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_calcular"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/water_animation" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            android:text=""
            android:textColor="@color/teal_700"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/animation"
            app:layout_constraintEnd_toEndOf="@+id/animation"
            app:layout_constraintStart_toStartOf="@+id/animation"
            app:layout_constraintTop_toTopOf="@+id/animation" />

        <Button
            android:id="@+id/bt_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/lembrete"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/bt_alarme"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation" />

        <Button
            android:id="@+id/bt_alarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/alarme"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_lembrete"
            app:layout_constraintTop_toBottomOf="@+id/animation" />

        <TextView
            android:id="@+id/txt_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_hora"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_dois_pontos"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_lembrete" />

        <TextView
            android:id="@+id/txt_dois_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dois_pontos"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_minutos"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_hora"
            app:layout_constraintTop_toBottomOf="@+id/bt_alarme" />

        <TextView
            android:id="@+id/txt_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_minutos"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"
            app:layout_constraintTop_toBottomOf="@+id/bt_alarme" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>